--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,20 @@
 <resources>
+
+
+    <string name="commentfail">network busy, try in another time.</string>
+    <string name="placeSaved">Place Saved Sucessfully</string>
+    <string name="placeUnSaved">place Unsaved Successfully</string>
+
+    <string name="Governmental">Governmental</string>
+    <string name="Private">Private</string>
+    <string name="Emergency">Has Emergency</string>
+    <string name="NoEmergency">No Emergency</string>
+    <string name="delivery">Has Delivery</string>
+    <string name="NODelivery">No Delivery</string>
+    <string name="NOHotline">No Hotline</string>
+
+
+
     <string name="app_name">At3aleg Fen</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -76,6 +92,7 @@
     <string name="username">Username</string>
     <string name="finish">Finish</string>
     <string name="upload_photo">Upload Photo</string>
+    <string name="photo">Photo</string>
 
     <string name="specialization">Specialization</string>
     <string name="specialization_hint">Select Specialization</string>
@@ -92,7 +109,6 @@
 
     <string name="title_activity_advanced_search">AdvancedSearch</string>
     <string name="signed_out">Sign out</string>
-    <string name="loading">Loading</string>
     <string name="signed_in_fmt">Signed in as: %s</string>
 
     <string name="facebook_app_id">348169818880552</string>
@@ -192,25 +208,6 @@
     <string name="snackbar_message_disconnected">No Internet Connection</string>
     <string name="title_activity_settings">Settings</string>
 
-    <string name="error_general">Something went wrong</string>
-
-    <string name="base_api_url" translatable="false">http://at3alegfeenapi-001-site1.itempurl.com/api</string>
-
-    <string name="state_closed" translatable="false">Closed</string>
-    <string name="state_outdated" translatable="false">Outdated</string>
-
-    <string name="error_general_error">Something went wrong, please try again</string>
-    <string name="error_no_network_connection">Please check your internet connection</string>
-    <string name="error_reporting_medical_place">Error reporting medical place</string>
-    <string name="no_available_anymore">This places is not available anymore</string>
-    <string name="information_outdated">Information about this place needs to be updated</string>
-    <string name="place_state">Place state</string>
-    <string name="your_comment">Your comment</string>
-    <string name="report">Report</string>
-    <string name="cancel">Cancel</string>
-    <string name="done">Done</string>
-    <string name="new_report">New report</string>
-
     <string name="place_name">Place name</string>
     <string name="building_number">Building number</string>
     <string name="street">Street</string>
@@ -221,7 +218,6 @@
     <string name="ok">Ok</string>
 
     <string name="governmental">Governmental: </string>
-    <string name="delivery">Delivery: </string>
     <string name="emergency">Emergency: </string>
 
     <string name="request_type_shared_preference">RequestType</string>
@@ -270,9 +266,72 @@
     </string-array>
 
     <string name="no_search">No Search Result </string>
-    <string name="commentfail">network busy, try in another time.</string>
-    <string name="placeSaved">Place Saved Sucessfully</string>
-    <string name="placeUnSaved">place Unsaved Successfully</string>
+    <string name="error_general">Something went wrong</string>
 
+    <string name="base_api_url" translatable="false">http://at3alegfeenapi-001-site1.itempurl.com/api</string>
+
+    <string name="state_closed" translatable="false">Closed</string>
+    <string name="state_outdated" translatable="false">Outdated</string>
+
+    <string name="error_general_error">Something went wrong, please try again</string>
+    <string name="error_no_network_connection">Please check your internet connection</string>
+    <string name="error_reporting_medical_place">Error reporting medical place</string>
+    <string name="no_available_anymore">This places is not available anymore</string>
+    <string name="information_outdated">Information about this place needs to be updated</string>
+    <string name="place_state">Place state</string>
+    <string name="your_comment">Your comment</string>
+    <string name="report">Report</string>
+    <string name="cancel">Cancel</string>
+    <string name="loading">Loading</string>
+    <string name="done">Done</string>
+    <string name="new_report">New report</string>
+
+    <string name="report_outdated_medical_place">Report outdated medical place</string>
+
+    <string name="language">Language</string>
+    <string name="english">English</string>
+    <string name="arabic_ar">العربية</string>
+
+    <string name="ar">ar</string>
+    <string name="en">en</string>
+
+    <string name="general">General</string>
+
+    <string-array name="languages">
+        <item>@string/arabic_ar</item>
+        <item>@string/english</item>
+    </string-array>
+
+    <string-array name="languages_entries">
+        <item>@string/ar</item>
+        <item>@string/en</item>
+    </string-array>
+
+
+    <string name="current_language">en</string>
+
+    <string name="settings">Settings</string>
+
+    <string name="new_user">New user</string>
+    <string name="are_you_a_doctor">Are you a doctor?</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="places">Places</string>
+    <string name="sort_by">Sort by</string>
+    <string name="nearest">Nearest</string>
+    <string name="top_rated">Top rated</string>
+    <string name="results">Results</string>
+
+
+    <string name="doctor_profile">Doctor Profile</string>
+    <string name="name">Name</string>
+    <string name="save">Save</string>
+    <string name="write_your_message">Write your message...</string>
+    <string name="send">Send</string>
+    <string name="sign_in_to_chat">Signin to chat</string>
+    <string name="register">Register</string>
+    <string name="sign_up_to_chat">Sign up to chat</string>
+    <string name="home">Home</string>
 
 </resources>
