--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,6 @@
     <string name="NOHotline">No Hotline</string>
 
 
-
     <string name="app_name">At3aleg Fen</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -26,17 +25,17 @@
     <string name="default_info_title">Default Location</string>
     <string name="default_info_snippet">No medicalPlaces found, because location permission is disabled.</string>
 
-    <string name="settings_language_default">0</string>
-    <string name="settings_language_title">Language</string>
-    <string name="settings_language_dialog_title">Choose a language</string>
-    <string name="settings_language_key">settings_language_key</string>
+    <string name="settings_language_default" translatable="false">0</string>
+    <string name="settings_language_title" translatable="false">Language</string>
+    <string name="settings_language_dialog_title" translatable="false">Choose a language</string>
+    <string name="settings_language_key" translatable="false">settings_language_key</string>
 
-    <string-array name="settings_language_array_entries">
+    <string-array name="settings_language_array_entries" translatable="false">
         <item>English</item>
         <item>Arabic</item>
     </string-array>
 
-    <string-array name="settings_language_array_values">
+    <string-array name="settings_language_array_values" translatable="false">
         <item>0</item>
         <item>1</item>
     </string-array>
@@ -50,6 +49,10 @@
         <item>Doctorate</item>
         <item>Fellowship</item>
     </string-array>
+    <string name="Clinics">Clinics</string>
+    <string name="Hospitals">Hospitals</string>
+    <string name="Labs">Labs</string>
+    <string name="Pharmacies">Pharmacies</string>
 
     <string-array name="doctor_specializations_array">
         <item> General Internal medicine </item>
@@ -92,7 +95,7 @@
     <string name="username">Username</string>
     <string name="finish">Finish</string>
     <string name="upload_photo">Upload Photo</string>
-    <string name="photo">Photo</string>
+    <string name="photo" translatable="false">Photo</string>
 
     <string name="specialization">Specialization</string>
     <string name="specialization_hint">Select Specialization</string>
@@ -118,7 +121,7 @@
     <string name="title_activity_doctor_sign_up">DoctorSignUp</string>
     <string name="title_activity_place_details">PlaceDetails</string>
     <string name="title_activity_details">Details</string>
-    <string name="title_activity_place_detail">PlaceDetail</string>
+    <string name="title_activity_place_detail" translatable="false">PlaceDetail</string>
     <string name="title_activity_saved_places">SavedPlaces</string>
 
     <string name="navigation_drawer_item_title_clinics">Clinics</string>
@@ -160,20 +163,20 @@
     <string name="hint_card_number">Card number</string>
     <string name="hint_cvv">CVV</string>
 
-    <string name="shared_pref_signed_in_user">SignedInUser</string>
-    <string name="shared_pref_signed_in_user_id">SignedInUserId</string>
-    <string name="shared_pref_signed_in_user_name">SignedInUserName</string>
-    <string name="shared_pref_signed_in_user_email">SignedInUserEmail</string>
-    <string name="shared_pref_signed_in_user_type">SignedInUserType</string>
-    <string name="shared_pref_signed_in_user_saved_place">SignedInUserSavedPlace</string>
+    <string name="shared_pref_signed_in_user" translatable="false">SignedInUser</string>
+    <string name="shared_pref_signed_in_user_id" translatable="false">SignedInUserId</string>
+    <string name="shared_pref_signed_in_user_name" translatable="false">SignedInUserName</string>
+    <string name="shared_pref_signed_in_user_email" translatable="false">SignedInUserEmail</string>
+    <string name="shared_pref_signed_in_user_type" translatable="false">SignedInUserType</string>
+    <string name="shared_pref_signed_in_user_saved_place" translatable="false">SignedInUserSavedPlace</string>
 
-    <string name="shared_pref_premium_user">PremiumUser</string>
-    <string name="shared_pref_premium_user_name">PremiumUserName</string>
-    <string name="shared_pref_premium_user_specialization">PremiumUserSpecialization</string>
-    <string name="shared_pref_premium_user_degree">PremiumUserDegree</string>
-    <string name="shared_pref_premium_user_overview">PremiumUserOverview</string>
-    <string name="shared_pref_premium_user_photo">PremiumUserPhoto</string>
-    <string name="shared_pref_premium_user_certifications">PremiumUserCertifications</string>
+    <string name="shared_pref_premium_user" translatable="false">PremiumUser</string>
+    <string name="shared_pref_premium_user_name" translatable="false">PremiumUserName</string>
+    <string name="shared_pref_premium_user_specialization" translatable="false">PremiumUserSpecialization</string>
+    <string name="shared_pref_premium_user_degree" translatable="false">PremiumUserDegree</string>
+    <string name="shared_pref_premium_user_overview" translatable="false">PremiumUserOverview</string>
+    <string name="shared_pref_premium_user_photo" translatable="false">PremiumUserPhoto</string>
+    <string name="shared_pref_premium_user_certifications" translatable="false">PremiumUserCertifications</string>
 
     <string name="internet_connection_problem_message">Internet connection problem</string>
     <string name="sign_in_problem_message">You must sign in</string>
@@ -217,17 +220,18 @@
     <string name="add_new_place_success">Your place will be checked and added soon</string>
     <string name="ok">Ok</string>
 
+
     <string name="governmental">Governmental: </string>
     <string name="emergency">Emergency: </string>
 
-    <string name="request_type_shared_preference">RequestType</string>
-    <string name="request_type_shared_preference_number">RequestTypeNumber</string>
+    <string name="request_type_shared_preference" translatable="false">RequestType</string>
+    <string name="request_type_shared_preference_number" translatable="false">RequestTypeNumber</string>
 
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_log_in">Sasa chat</string>
-    <string name="title_activity_register">Register</string>
+    <string name="title_activity_log_in" translatable="false">At3aleg Feen Chat</string>
+    <string name="title_activity_register" translatable="false">Register</string>
 
 
     <!-- LogInActivity-->
@@ -269,10 +273,10 @@
     <string name="no_search">No Search Result </string>
     <string name="error_general">Something went wrong</string>
 
-    <string name="base_api_url" translatable="false">http://at3alegfeenapi-001-site1.itempurl.com/api</string>
+    <string name="base_api_url">http://at3alegfeenapi-001-site1.itempurl.com/api</string>
 
-    <string name="state_closed" translatable="false">Closed</string>
-    <string name="state_outdated" translatable="false">Outdated</string>
+    <string name="state_closed">Closed</string>
+    <string name="state_outdated">Outdated</string>
 
     <string name="error_general_error">Something went wrong, please try again</string>
     <string name="error_no_network_connection">Please check your internet connection</string>
@@ -290,11 +294,11 @@
     <string name="report_outdated_medical_place">Report outdated medical place</string>
 
     <string name="language">Language</string>
-    <string name="english">English</string>
-    <string name="arabic_ar">العربية</string>
+    <string name="english" translatable="false">English</string>
+    <string name="arabic_ar" translatable="false">العربية</string>
 
-    <string name="ar">ar</string>
-    <string name="en">en</string>
+    <string name="ar" translatable="false">ar</string>
+    <string name="en" translatable="false">en</string>
 
     <string name="general">General</string>
 
@@ -317,7 +321,7 @@
     <string name="are_you_a_doctor">Are you a doctor?</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment </string>
     <string name="places">Places</string>
     <string name="sort_by">Sort by</string>
     <string name="nearest">Nearest</string>
@@ -335,5 +339,8 @@
     <string name="sign_up_to_chat">Sign up to chat</string>
     <string name="home">Home</string>
     <string name="unSaved">Un Saved</string>
+    <string name="AddReview">Add Review</string>
+    <string name="address">Address</string>
+    <string name="appoint">Appointment</string>
 
 </resources>
